# server/api/auth/authController.ts
@@ -1,7 +1,7 @@
 import { Request, Response } from 'express';
 import Controller from '../controller';
 import AuthService from './authService';
-import { RegisterRequest } from './authModel';
+import { LoginRequest, RegisterRequest } from './authModel';
 
 export default class AuthController extends Controller {
     private authService: AuthService;
@@ -23,5 +23,17 @@ export default class AuthController extends Controller {
             } as RegisterRequest);
             return res.send(response);
         }, 'failed to register new users')(req, res);
+    }
+
+    async login(req: Request, res: Response) {
+        return this.addErrorReporting(async (req: Request, res: Response) => {
+            const { email, password } = req.body as LoginRequest;
+            const response = await this.authService.login({
+                email,
+                password,
+            } as LoginRequest);
+
+            return res.send(response);
+        }, 'failed to login')(req, res);
     }
 }
